--- a/01-elementos-pre-textuais/agradecimentos.tex
+++ b/01-elementos-pre-textuais/agradecimentos.tex
@@ -4,11 +4,11 @@
 
 \begin{agradecimentos}
 
-Quero agradecer à minha família pela dedicação, zelo, carinho, apoio e confiança, sem vocês eu nada seria. Em especial, quero agradecer à minha mãe por acreditar em mim e me amar incondicionalmente. Ao meu irmão, por sempre estar ao meu lado, me apoiando sempre. A minha vó, por ser essa pessoa especial na minha vida. E ao meu pai por todo o apoio.
+Quero agradecer à minha família pela dedicação, zelo, carinho, apoio e confiança, sem vocês eu nada seria. Em especial, quero agradecer à minha mãe, Andrea Athayde, por acreditar em mim e me amar incondicionalmente. Ao meu irmão, por sempre estar ao meu lado, me apoiando sempre. A minha vó, por ser essa pessoa especial na minha vida. E ao meu pai por todo o apoio.
 
-Agradeço a Joicimara, por todo o incentivo e apoio. Obrigada por fazer dessa caminhada árdua, divertida e obrigada por acreditar.
+Agradeço a Joicimara Araújo, por todo o incentivo e apoio. Obrigada por acreditar.
 
-Agradeço a Rosinei, por me criar. Aos meus amigos, por todas as conversas e todos os momentos de apoio e de brincadeiras fúteis que me ajudaram a abstrair em momentos de tensão, vocês são a minha segunda família. 
+Agradeço a Rosinei, por tudo. Aos meus amigos, por todas as conversas e todos os momentos de apoio e de brincadeiras fúteis que me ajudaram a abstrair em momentos de tensão, vocês são a minha segunda família. 
 
 Ao meu orientador Tales Argolo, pela paciência e apoio. À professora Anolan, pela ajuda e direção. A meus colegas de trabalho, em especial para minha supervisora Paula pela compreensão e apoio. Sem essas pessoas eu não teria conseguido. Muito obrigada.
 
