--- a/refbase.bib
+++ b/refbase.bib
@@ -21,9 +21,28 @@
 
 @article{leal2009reconfigurable,
 	title={Reconfigurable multi robot society based on Lego mindstorms},
-	author={Leal Martinez, David and others},
+	author={Leal Martinez, David},
 	year={2009},
 	publisher={Helsinki University of Technology}
+}
+
+@book{ok1970,
+	title = "Modern control engineering",
+	author = "Ogata, Katsuhiko",
+	series = "Prentice-Hall electrical engineering series",
+	publisher = "Prentice-Hall",
+	address = "Englewood Cliffs (N.J.)",
+	url = "http://opac.inria.fr/record=b1080640",
+	isbn = "0-13-590232-0",
+	year = 1970
+}
+
+@book{franklin1998digital,
+	title={Digital control of dynamic systems},
+	author={Franklin, Gene F and Powell, J David and Workman, Michael L},
+	volume={3},
+	year={1998},
+	publisher={Addison-wesley Menlo Park}
 }
 
 @article{RSDH2004,
@@ -133,7 +152,7 @@
 	
 	Timestamp                = {2013.12.29},
 	Url                      = {http://bricxcc.sourceforge.net/},
-	Urlaccessdate            = {30 de março de 2009}
+	Urlaccessdate            = {20 de maio de 2015}
 }
 
 @book{TJRD13,
