--- a/01-elementos-pre-textuais/dedicatoria.tex
+++ b/01-elementos-pre-textuais/dedicatoria.tex
@@ -4,6 +4,6 @@
 
 \begin{dedicatoria}
 
-Dedico este trabalho à minha família, à Joicimara, aos meus amigos, a meu orientador Tales. A confiança de vocês em mim é o que me fez chegar aqui. Muito obrigada. 
+Dedico este trabalho à minha família, à Joicimara Araújo, aos meus amigos, a meu orientador Tales. A confiança de vocês em mim é o que me fez chegar aqui. Muito obrigada. 
 
 \end{dedicatoria}
