--- a/02-elementos-textuais/metodologia.tex
+++ b/02-elementos-textuais/metodologia.tex
@@ -21,9 +21,9 @@ Para estabelecer o modelo matemático do problema, foi considerado o modelo de r
 	\label{fig:robo}
 \end{figure}
 
-Após feita a modelagem do problema, foram feitas as implementações e os testes, onde seria possível observar se a odometria feita seria suficiente para alimentar o sistema com precisão e tornar a solução viável. Deve-se levar em consideração que para tanto, foram utilizados os \emph{encoders} óticos acoplados aos motores do \emph{kit Lego Mindstorms\textregistered} os quais possuem uma imprecisão que é da ordem de $\pm$ 1 grau por rotação. 
+Após feita a modelagem do problema, foram feitas as implementações e os testes, onde seria possível observar se a odometria feita seria suficiente para localizar cada robô do sistema multiagente com precisão e tornar a solução viável. Deve-se levar em consideração que para tanto, foram utilizados os \emph{encoders} óticos acoplados aos motores do \emph{kit Lego Mindstorms\textregistered} os quais possuem uma imprecisão que é da ordem de $\pm$ 1 grau por rotação. 
 
-Concomitantemente, foram realizadas simulações, com o auxílio do software \emph{MATLAB\textregistered}, a fim de prever e validar a modelagem feita do problema, desconsiderando os problemas práticos como falha na comunicação e falta de sincronismo entre os robôs, erros dos \emph{encoders} e problemas como saturação do motor e derrapagem das rodas. Outro objetivo dessas simulações é possibilitar que se faça uma comparação entre o sistema real e o seu modelo idealizado.
+Concomitantemente, foram realizadas simulações, com o auxílio do software \emph{MATLAB$^{\textregistered}$}, a fim de prever e validar a modelagem feita do problema, desconsiderando os problemas práticos como falha na comunicação e falta de sincronismo entre os robôs, erros dos \emph{encoders} e problemas como saturação do motor e derrapagem das rodas. Outro objetivo dessas simulações é possibilitar que se faça uma comparação entre o sistema real e o seu modelo idealizado.
 
 \section{Modelo Matemático}
 \label{sec:modMatematico}
@@ -48,7 +48,7 @@ sendo:
 	\item $v$ e $\omega$ indicam a velocidade linear e angular do robô, respectivamente, que são as entradas desse sistema dinâmico.	
 \end{itemize}
 
-Derivadas dessas equações, surgem as equações (\ref{eq:posiçãoxreal}), (\ref{eq:posiçãoyreal}) e (\ref{eq:posiçãothetareal}) modeladas com base no robô real, que não é um elemento pontual no espaço e sim, um robô diferencial de duas rodas com uma restrição não holonômica. Elas serão utilizadas para gerar as trajetórias dos robôs no ambiente \emph{MATLAB\textregistered} e verificar se elas são compatíveis com o caminho percorrido pelos robôs no mundo real. 
+Derivadas dessas equações, surgem as equações (\ref{eq:posiçãoxreal}), (\ref{eq:posiçãoyreal}) e (\ref{eq:posiçãothetareal}) modeladas com base no robô real, que não é um elemento pontual no espaço e sim, um robô diferencial de duas rodas com uma restrição não holonômica. Elas serão utilizadas para gerar as trajetórias dos robôs no ambiente \emph{MATLAB$^{\textregistered}$} e verificar se elas são compatíveis com o caminho percorrido pelos robôs no mundo real. 
 
 As equações que descrevem a posição do robô em função dos giros de cada roda são dadas por:
 \begin{subequations}
@@ -66,14 +66,14 @@ As equações que descrevem a posição do robô em função dos giros de cada r
 	\end{equation}
 	\label{eq:posicaorealEnc}
 \end{subequations}
-sendo:
-\begin{itemize}
-	\item $x_{k+1}$ e $x_{k}$ a coordenada $x$ do robô no instante $k$ e no instante $k+1$;
-	\item $y_{k+1}$ e $y_{k}$ a coordenada $y$ do robô no instante $k$ e no instante $k+1$;
-	\item $\theta_{k+1}$ e $\theta_{k}$ o sentido do robô no instante $k$ e no instante $k+1$;	
-	\item $D_{r}$ e $D_{l}$ a distância que a roda direita e esquerda percorreram no instante de tempo entre $k$ e $k+1$, respectivamente;
-	\item $L$ o tamanho do eixo das rodas do robô;
-\end{itemize}
+sendo, $y_{k+1}$ e $y_{k}$ a coordenada $y$ do robô no instante $k$ e no instante $k+1$; $\theta_{k+1}$ e $\theta_{k}$ o sentido do robô no instante $k$ e no instante $k+1$; $D_{r}$ e $D_{l}$ a distância que a roda direita e esquerda percorreram no instante de tempo entre $k$ e $k+1$, respectivamente; E $L$ o tamanho do eixo das rodas do robô;
+%\begin{itemize}
+%	\item $y_{k+1}$ e $y_{k}$ a coordenada $y$ do robô no instante $k$ e no instante $k+1$;
+%	\item $\theta_{k+1}$ e $\theta_{k}$ o sentido do robô no instante $k$ e no instante $k+1$;	
+%	\item $D_{r}$ e $D_{l}$ a distância que a roda direita e esquerda percorreram no instante de tempo entre $k$ e $k+1$, respectivamente;
+%	\item $L$ o tamanho do eixo das rodas do robô;
+%\end{itemize}
+
 Em que a \autoref{eq:posiçãoxreal} indica que a posição atual do robô em $x$ é igual a posição do robô anterior em $x$ mais a média da distância percorrida por ambas as rodas multiplicado pelo cosseno do ângulo de orientação anterior do robô. Analogamente, a \autoref{eq:posiçãoyreal} descreve a posição em $y$ atual do robô como a posição em $y$ anterior do robô mais a média das distâncias percorridas pelas rodas multiplicada pelo seno do ângulo de orientação do robô no instante anterior. Já a \autoref{eq:posiçãothetareal} indica que o ângulo atual de orientação do robô é igual ao ângulo anterior mais a diferença entre a distância percorrida pelas rodas divido sobre a distância entre as rodas. 
 
 Tendo em vista que a odometria será feita utilizando-se os \emph{encoders} da própria plataforma e o sistema será realimentado com essas medidas, é de extrema importância que a trajetória descrita no mundo real e a registrada pelo robô, utilizando-se os \emph{encoders}, sejam significativamente semelhantes. Caso contrário, a realimentação do sistema estará incorreta, comprometendo seriamente, e por que não dizer inviabilizando, o controle do sistema. 
@@ -171,7 +171,7 @@ v_{2} = v_{d} + k_{2} (e_{1,2} + e_{3,2})
 v_{3} = v_{d} + k_{3} e_{1,3}
 \label{eq:vel3P1}
 \end{equation}
-onde,
+sendo,
 \begin{itemize}
 	\item $v_{1}$, $v_{2}$ e $v_{3}$ são as velocidades que cada robô deve possuir para assumir a formação \emph{in line};
 	\item $v_{d}$ é a velocidade que a frota deve assumir após estar alinhada;
